Added header and feature item structure and styles

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,183 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Playfair+Display"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Hive Challenge</title>
   </head>
   <body>
-    <header>
-      <div class="head wrapper"></div>
-    </header>
+    <div class="wrapper head">
+      <div class="content head">
+        <svg
+          class="logo"
+          version="1.1"
+          id="Layer_1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px"
+          y="0px"
+          viewBox="0 0 231 54.6"
+          style="enable-background:new 0 0 231 54.6;"
+          xml:space="preserve"
+        >
+          <style type="text/css">
+            .st0 {
+              fill: #2d3a4b;
+            }
+            .st3 {
+              fill: #ffffff;
+            }
+            .st4 {
+              fill: #fde428;
+            }
+          </style>
+          <g>
+            <text
+              transform="matrix(1.0071 0 0 1 0 41.4116)"
+              class="st0 st1 st2"
+            >
+              EC SHOP
+            </text>
+            <circle class="st3" cx="76.7" cy="24.3" r="23.5" />
+            <text
+              transform="matrix(1.0071 0 0 1 55.5947 41.6465)"
+              class="st4 st1 st2"
+            >
+              O
+            </text>
+          </g>
+        </svg>
+        <ul class="nav-bar">
+          <li class="nav-item"><a>Products</a></li>
+          <li class="nav-item"><a>Store</a></li>
+          <li class="nav-item"><a>Designer</a></li>
+          <li class="nav-item"><a>Contact</a></li>
+          <li class="nav-item">
+            <ul class="nav-bar">
+              <li class="nav-item icon">
+                <a>
+                  <svg
+                    width="1em"
+                    height="1em"
+                    preserveAspectRatio="xMidYMid meet"
+                    viewBox="0 0 1024 1024"
+                  >
+                    <path
+                      d="M512 64q39 0 80.5 15.5t72.5 39 51 52 20 53.5v160q0 57-24 127t-71 106q-8 7-14 16.5t-8.5 20T617 675q5 36 37 51l279 132 2 .5 4 1.5 5 3 5.5 4.5 5 6.5 3.5 10 1 13v62l-895 1v-65q0-25 27-37l281-133q32-15 36.5-50.5T385 617q-46-37-71.5-107.5T288 384V224q0-33 33-70.5T407 90t105-26zm0-64q-69 0-136.5 33.5t-109.5 86T224 224v160q0 65 30.5 149.5T345 667L64 800q-3 1-7 3t-15 9-19.5 14T7 843.5 0 863v97q0 26 18.5 44.5T64 1023h896q26 0 44.5-18.5T1023 960v-97q0-10-6.5-20.5t-16-18T982 811t-16-9l-6-2-279-133q60-47 89.5-130T800 384V224q0-39-25.5-79.5T709 72t-93-52T512 0z"
+                      fill="#2d3a4b"
+                    />
+                    <rect
+                      x="0"
+                      y="0"
+                      width="1024"
+                      height="1024"
+                      fill="rgba(0, 0, 0, 0)"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="nav-item icon">
+                <a>
+                  <svg
+                    width="1.04em"
+                    height="1em"
+                    preserveAspectRatio="xMidYMid meet"
+                    viewBox="0 0 1024 992"
+                  >
+                    <path
+                      d="M1015.5 267.5Q1006 254 990 254H311L259 77q-7-24-19-41t-25.5-24T191 2.5 171 0H34Q21 0 12 9T3 32q0 8 4 15.5T18.5 59 34 63h137q4 0 7.5 1t9.5 8.5T198 95l177 650q2 6 6.5 11.5T392 765t13 3h432q10 0 18.5-6t11.5-15l153-450q5-16-4.5-29.5zM815 704H430L328 318h616zm-63 128q-33 0-56.5 23.5T672 912t23.5 56.5T752 992t56.5-23.5T832 912t-23.5-56.5T752 832zm-288 0q-22 0-40.5 11t-29 29-10.5 40q0 33 23.5 56.5T464 992t56.5-23.5T544 912q0-8-1.5-16t-4.5-15-7.5-13.5-10-12-12-10T495 838t-15-4.5-16-1.5z"
+                      fill="#2d3a4b"
+                    />
+                    <rect
+                      x="0"
+                      y="0"
+                      width="1024"
+                      height="992"
+                      fill="rgba(0, 0, 0, 0)"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li class="nav-item icon">
+                <a>
+                  <svg
+                    width="1.02em"
+                    height="1em"
+                    preserveAspectRatio="xMidYMid meet"
+                    viewBox="0 0 1040 1024"
+                  >
+                    <path
+                      d="M1031 969L720 656q93-111 93-256 0-109-53.5-201t-146-145.5T412.5 0 212 53.5 66.5 199 13 400t53.5 201T212 746.5 413 800q149 0 262-98l310 312q10 10 23 10t22.5-9.5 9.5-23-9-22.5zM413 737q-92 0-169.5-45.5T121 568.5 76 400t45-168.5 122.5-123 169-45.5 169 45.5 122.5 123T749 400q0 39-9 77t-25.5 71-39.5 62.5-52 52.5-62 39.5-71 25.5-77 9z"
+                      fill="#2d3a4b"
+                    />
+                    <rect
+                      x="0"
+                      y="0"
+                      width="1040"
+                      height="1024"
+                      fill="rgba(0, 0, 0, 0)"
+                    />
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="wrapper arrival">
+      <div class="arrival-background">
+        <div class="content arrival">
+          <img class="card-image" src="./images/feature-bike.png" alt="" />
+          <div class="card-headers">
+            <p class="card desc">The Latest Product from Ecoshop</p>
+            <p class="card price"><sup>$</sup>299</p>
+            <p class="card title">
+              FEATURED<br />
+              CYCLE
+            </p>
+            <a class="card link">SHOP</a>
+            <div class="card arrows">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="33px"
+                height="23px"
+              >
+                <path
+                  fill-rule="evenodd"
+                  fill="rgb(0, 0, 0)"
+                  d="M11.151,0.756 L11.975,1.610 L3.023,10.896 L32.469,10.896 L32.469,12.104 L3.021,12.104 L11.975,21.389 L11.151,22.244 L0.793,11.501 L11.151,0.756 Z"
+                />
+              </svg>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="33px"
+                height="23px"
+              >
+                <path
+                  fill-rule="evenodd"
+                  fill="rgb(0, 0, 0)"
+                  d="M21.848,0.756 L21.025,1.610 L29.977,10.896 L0.531,10.896 L0.531,12.104 L29.979,12.104 L21.025,21.389 L21.848,22.244 L32.206,11.501 L21.848,0.756 Z"
+                />
+              </svg>
+            </div>
+          </div>
+        </div>
+        <div class="content card-context">
+          <h2>NEW ARRIVAL</h2>
+          <p>
+            Occaecat consequat dolor culpa minim consequat sint dolore duis qui
+            sit quis. Non consequat non enim laborum.
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
